<resources>
    //MainActivity
    <string name="app_name">Banco</string>
    <string name="btn_contas_label">Contas</string>
    <string name="btn_transferir_label">Transferir</string>
    <string name="btn_debitar_label">Debitar</string>
    <string name="btn_creditar_label">Creditar</string>
    <string name="btn_pesquisar_label">Pesquisar</string>
    <string name="btn_clientes_label">Clientes</string>
    <string name="txt_total_banco">Total no Banco:</string>

    //ClientesActivity
    <string name="btn_add_clientes_label">Adicionar Cliente</string>

    //AdicionarClienteActivity
    <string name="txt_add_cliente_nome">Nome</string>
    <string name="edt_add_cliente_nome">Digite um nome</string>
    <string name="txt_add_cliente_cpf">CPF</string>
    <string name="edt_add_cliente_cpf">Digite um CPF</string>
    <string name="btn_add_cliente_atualizar">Atualizar</string>
    <string name="btn_add_cliente_remover">Remover</string>

    //ContasActivity
    <string name="btn_contas_add_conta">Adicionar Conta</string>

    //AdicionarContaActivity
    <string name="txt_add_conta_numero">Número da Conta</string>
    <string name="edt_add_conta_numero">Digite o número da conta</string>
    <string name="txt_add_conta_nome">Nome</string>
    <string name="edt_add_conta_nome">Digite um nome</string>
    <string name="txt_add_conta_cpf">CPF</string>
    <string name="edt_add_conta_cpf">Digite um CPF</string>
    <string name="txt_add_conta_saldo">Saldo</string>
    <string name="edt_add_conta_saldo">Digite o saldo</string>
    <string name="btn_add_conta_atualizar">Adicionar</string>
    <string name="btn_add_conta_remover">Remover</string>
    <string name="tst_contaJaExistente">Número de conta já existente.</string>

    //PesquisarActivity
    <string name="edt_pesquisar_input">Digite algum termo para pesquisar</string>
    <string name="rdbtn_pesquisar_nome">Nome</string>
    <string name="rdbtn_pesquisar_cpf">CPF</string>
    <string name="rdbtn_pesquisar_numero">Número da Conta</string>
    <string name="btn_pesquisar_pesquisar">Pesquisar</string>

    //EditarContaActivity
    <string name="btn_editarConta_atualizar_editar">Editar</string>


    //Verificações de conta
    <string name="tst_verificar_nome">O nome deve ter pelo menos 5 caracteres.</string>
    <string name="tst_verificar_cpf">O cpf deve ter 11 números.</string>
    <string name="tst_verificar_saldo">Campo saldo não pode ficar vazio.</string>
    <string name="tst_verificar_numero">O número da conta deve ter 3 dígitos.</string>
    <string name="tst_conta_nao_existe">Não existe conta com o número inserido.</string>

    //TransferirActivity
    <string name="tst_verificar_numero_origem">O número da conta de origem deve ter 3 dígitos.</string>
    <string name="tst_verificar_numero_destino">O número da conta de destino deve ter 3 dígitos.</string>
    <string name="tst_conta_origem_errada">Conta de origem não existe.</string>
    <string name="tst_conta_destino_errada">Conta de destino não existe.</string>
    <string name="tst_verificar_valor">O campo valor não pode ficar vazio.</string>
    <string name="txt_tipoOperacao">TRANSFERIR</string>
    <string name="btn_Operacao">Transferir</string>
    <string name="hint_valorOperacao"> transferido</string>
    <string name="tst_saldo_insuficiente">Saldo insuficiente para transferir.</string>

    //activity_operacoes.xml
    <string name="txt_numeroContaOrigem">Número da Conta Origem</string>
    <string name="edt_numeroContaOrigem">Digite o número da conta</string>
    <string name="txt_numeroContaDestino">Número da Conta Destino</string>
    <string name="edt_numeroContaDestino">Digite o número da conta</string>
    <string name="txt_valor">Valor</string>
    <string name="edt_valor">Digite o valor a ser</string>

    //DebitarActivity
    <string name="txt_tipoOperacao_debitar">DEBITAR</string>
    <string name="btn_Operacao_debitar">Debitar</string>
    <string name="hint_valorOperacao_debitar"> debitado</string>

    //CreditarActivity
    <string name="txt_tipoOperacao_creditar">CREDITAR</string>
    <string name="btn_Operacao_creditar">Creditar</string>
    <string name="hint_valorOperacao_creditar">creditado</string>

    //ContaViewHolder
    <string name="txt_infoConta_saldoAtual">Saldo atual: </string>

</resources>