<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="7dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/pesquisa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/edt_pesquisar_input" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tipoPesquisa"
        android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:layout_margin="3dp"
                android:id="@+id/peloNomeCliente"
                android:text="@string/rdbtn_pesquisar_nome" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:id="@+id/peloCPFcliente"
                android:text="@string/rdbtn_pesquisar_cpf" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:id="@+id/peloNumeroConta"
                android:text="@string/rdbtn_pesquisar_numero" />
    </RadioGroup>


    <Button
        android:id="@+id/btn_Pesquisar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/btn_pesquisar_pesquisar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvResultado"
        android:layout_margin="3dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>